<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

		<ImageView
		    android:id="@+id/icon"
		    android:layout_width="171dp"
		    android:layout_height="136dp"
		    android:contentDescription="@string/app_icon_hint"
		    android:scaleType="centerCrop"
		    android:src="@drawable/icon" 
		    android:layout_gravity="center"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:ems="10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:ems="10"/>
    </LinearLayout>
   	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            <Button
                android:id="@+id/btnSignin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/signin" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/invaliduser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:text="@string/invaliduser"/>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="60dp">

        <TextView 
	       android:id="@+id/lnksignup"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:onClick="onClick"                
	       android:clickable="true" 
	       android:gravity="center"             
	       android:text="@string/signup_link"/>
	</LinearLayout>
</LinearLayout>